--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="test3">#26A69A</color>
     <color name="test4">#FFFEFF</color>
 
+    <color name="grey">#979797</color>
+
 </resources>
