--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="test2">#6ECFC5</color>
     <color name="test3">#26A69A</color>
     <color name="test4">#FFFEFF</color>
-    <color name="grey">#979797</color>
+    <color name="grey">#4FFF0000</color>
 
     <color name="bgColorWhite">#F8FAFC</color>
     <color name="primaryColor">#3B82F6</color>
