--- a/app/src/main/res/layout/item_cardview_fragments.xml
+++ b/app/src/main/res/layout/item_cardview_fragments.xml
@@ -1,47 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_margin="8dp"
+<LinearLayout
+    android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardHeaderMain"
         app:strokeColor="@color/borderColor"
         app:strokeWidth="1dp"
         android:backgroundTint="@color/cardColor"
         android:clickable="true"
         android:focusable="true"
         android:elevation="4dp"
-        android:layout_margin="4dp"
-        app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:textSize="18sp"
-            android:textColor="@color/mainText"
-            android:textStyle="bold"
-            android:layout_marginEnd="22dp"
-            android:layout_gravity="end|center"
-            android:text="سال تحصیلی 1403 - 1404"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <RelativeLayout
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:textSize="32sp"
-            android:textColor="@color/black"
-            android:layout_marginStart="30dp"
-            android:layout_gravity="start|center"
-            android:text="+"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/txtYearMain"
+                android:textSize="18sp"
+                android:textColor="@color/mainText"
+                android:textStyle="bold"
+                android:text="سال تحصیلی 1403 - 1404"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"/>
 
+            <TextView
+                android:id="@+id/toggleIcon"
+                android:textSize="32sp"
+                android:textColor="@color/black"
+                android:text="+"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"/>
+
+        </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/expandableMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:el_duration="300"
+        app:el_expanded="false">
+
+        <LinearLayout
+            android:gravity="end"
+            android:orientation="vertical"
+            android:padding="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:id="@+id/txtCardDetail"
+                android:textSize="15sp"
+                app:backgroundTint="@null"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="کنکور داخل 1403"
+                android:textColor="@android:color/white"
+                android:background="@drawable/button_gradient"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+    </net.cachapa.expandablelayout.ExpandableLayout>
+
+</LinearLayout>
