--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.google.android.material.appbar.AppBarLayout
+    android:paddingTop="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.Toolbar
+        android:backgroundTint="@color/accentColor"
         android:id="@+id/toolBarMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
