curve problem solved

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:background="@color/bgColorWhite"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
-
-    <include
-        android:id="@+id/toolBarLayout"
-        layout="@layout/toolbar_layout"/>
 
     <FrameLayout
         android:id="@+id/frameFragmentMain"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/curveBotNav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolBarLayout">
-
-
-    </FrameLayout>
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="85dp"
+        android:layout_gravity="top"/>
 
     <np.com.susanthapa.curved_bottom_navigation.CurvedBottomNavigationView
-
+        android:id="@+id/curveBotNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:paddingBottom="6dp"
         app:cbn_animDuration="400"
         app:cbn_elevation="8dp"
-        app:cbn_bg="@color/accentColor"
-        android:id="@+id/curveBotNav"
-        android:paddingBottom="6dp"
-        app:cbn_textSize ="13dp"
-        app:cbn_textColor="@color/white"
-        app:cbn_selectedColor="@color/black"
-        app:cbn_unSelectedColor="@color/white"
+        app:cbn_bg="@color/white"
+        app:cbn_fabBg="@color/accentColor"
+        app:cbn_textSize="13dp"
+        app:cbn_textColor="@color/black"
+        app:cbn_selectedColor="@color/white"
+        app:cbn_unSelectedColor="@color/black"
         app:cbn_showDot="true"
-        app:cbn_dotColor="@color/accentColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        app:cbn_dotColor="@color/white" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
