--- a/app/src/main/res/layout/item_cardview_fragments.xml
+++ b/app/src/main/res/layout/item_cardview_fragments.xml
@@ -53,10 +53,12 @@
         android:id="@+id/expandableMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:el_duration="300"
+        app:el_duration="370"
         app:el_expanded="false">
 
         <LinearLayout
+
+            android:id="@+id/linearContainer"
             android:gravity="end"
             android:orientation="vertical"
             android:padding="8dp"
