list arrow updated

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/bgColorWhite"
     tools:context=".MainActivity">
 
     <FrameLayout
@@ -29,6 +30,7 @@
         app:cbn_textColor="@color/black"
         app:cbn_selectedColor="@color/white"
         app:cbn_unSelectedColor="@color/black"
+        app:cbn_fabElevation="6dp"
         app:cbn_showDot="true"
         app:cbn_dotColor="@color/white" />
 
