--- a/app/src/main/res/layout/item_cardview_fragments.xml
+++ b/app/src/main/res/layout/item_cardview_fragments.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:background="@color/white"
+    android:background="@color/bgColorWhite"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingBottom="8dp"
+    android:paddingTop="12dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardHeaderMain"
@@ -36,16 +39,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"/>
 
-            <TextView
-                android:id="@+id/toggleIcon"
-                android:textSize="32sp"
-                android:textColor="@color/black"
-                android:text="+"
+            <ImageView
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:src="@drawable/ic_chevron"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="16dp"
+                android:id="@+id/toggleIcon1"
+                android:textColor="@color/black"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+
 
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
