--- a/app/src/main/res/layout/tajrobi_fragment.xml
+++ b/app/src/main/res/layout/tajrobi_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/bgColorWhite"
         android:id="@+id/recyclerTajrobi"
         android:layout_width="match_parent"
         android:layout_height="0dp"
