--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grey">#4FFF0000</color>
 
     <color name="bgColorWhite">#F8FAFC</color>
+    <color name="progressColor">#A63B82F6</color>
     <color name="primaryColor">#3B82F6</color>
     <color name="accentColor">#2563EB</color>
     <color name="cardColor">#FFFFFF</color>
