--- a/app/src/main/res/layout/tajrobi_fragment.xml
+++ b/app/src/main/res/layout/tajrobi_fragment.xml
@@ -13,4 +13,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+<!--    <com.mikhaellopez.circularprogressbar.CircularProgressBar-->
+<!--        app:cpb_progressbar_color="@color/accentColor"-->
+<!--        app:cpb_background_progressbar_color="@color/progressColor"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:id="@+id/progressBar"-->
+<!--        app:cpb_background_progressbar_width="5dp"-->
+<!--        app:cpb_progressbar_width="10dp"-->
+<!--        app:cpb_progress_direction="to_right"-->
+<!--        app:cpb_round_border="true"-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="150dp"/>-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
